--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
   		  <span class="absolute-no">o</span>
   		</label>
 
+      <h2 id="message"></h2>
+
   		<div class="row">
   			<div class="col-xs-4">
   				<div class="case" id="1">
-  				
   				</div>
   				
   			</div>
